--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,19 @@ body {
     margin: 0;
 }
 
+p {
+    margin: 0;
+    display: none;
+    text-align: center;
+    text-decoration: underline;
+    color: white;
+    cursor: pointer;
+}
+
+p.active {
+    display: block;
+}
+
 .container {
     margin: 0;
     padding: 10px;
